{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 274,
  "lineage": "f82ded45-62cc-7dc2-048e-868f362785ce",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/CloudSkilsRG1992/providers/Microsoft.Network/networkInterfaces/cloudskills-nic",
            "internal_domain_name_suffix": "2taicbnphqzefaqmust1znfedf.bx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "cloudskills-nic-ip-config",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/CloudSkilsRG1992/providers/Microsoft.Network/publicIPAddresses/cloudskills-publicIP",
                "subnet_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/CloudSkilsRG1992/providers/Microsoft.Network/virtualNetworks/cloudskills-vnet/subnets/testsubnet"
              }
            ],
            "location": "eastus",
            "mac_address": "00-0D-3A-11-09-E8",
            "name": "cloudskills-nic",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "CloudSkilsRG1992",
            "virtual_machine_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/CloudSkilsRG1992/providers/Microsoft.Compute/virtualMachines/cloudskillsvm"
          },
          "dependencies": [
            "azurerm_network_security_group.CloudskillsSG",
            "azurerm_public_ip.cloudskills-publicIP",
            "azurerm_resource_group.rg",
            "azurerm_subnet.cloudskills-sub",
            "azurerm_virtual_network.cloudskills-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "CloudskillsSG",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/CloudSkilsRG1992/providers/Microsoft.Network/networkSecurityGroups/cloudSkillsSG",
            "location": "eastus",
            "name": "cloudSkillsSG",
            "resource_group_name": "CloudSkilsRG1992",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "22",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow22",
                "priority": 102,
                "protocol": "Tcp",
                "source_address_prefix": "88.120.30.227",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow443",
                "priority": 101,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow80",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "Port22",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "22",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/CloudSkilsRG1992/providers/Microsoft.Network/networkSecurityGroups/cloudSkillsSG/securityRules/Allow22",
            "name": "Allow22",
            "network_security_group_name": "cloudSkillsSG",
            "priority": 102,
            "protocol": "Tcp",
            "resource_group_name": "CloudSkilsRG1992",
            "source_address_prefix": "88.120.30.227",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_network_security_group.CloudskillsSG",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "Port443",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "443",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/CloudSkilsRG1992/providers/Microsoft.Network/networkSecurityGroups/cloudSkillsSG/securityRules/Allow443",
            "name": "Allow443",
            "network_security_group_name": "cloudSkillsSG",
            "priority": 101,
            "protocol": "Tcp",
            "resource_group_name": "CloudSkilsRG1992",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_network_security_group.CloudskillsSG",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "Port80",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "80",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/CloudSkilsRG1992/providers/Microsoft.Network/networkSecurityGroups/cloudSkillsSG/securityRules/Allow80",
            "name": "Allow80",
            "network_security_group_name": "cloudSkillsSG",
            "priority": 100,
            "protocol": "Tcp",
            "resource_group_name": "CloudSkilsRG1992",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "dependencies": [
            "azurerm_network_security_group.CloudskillsSG",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "cloudskills-publicIP",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/CloudSkilsRG1992/providers/Microsoft.Network/publicIPAddresses/cloudskills-publicIP",
            "idle_timeout_in_minutes": 4,
            "ip_address": "13.90.17.11",
            "ip_version": "IPv4",
            "location": "eastus",
            "name": "cloudskills-publicIP",
            "resource_group_name": "CloudSkilsRG1992",
            "sku": "Basic",
            "tags": {
              "environment": "Dev"
            }
          },
          "dependencies": [
            "azurerm_network_security_group.CloudskillsSG",
            "azurerm_resource_group.rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "cloudskills-sub",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/CloudSkilsRG1992/providers/Microsoft.Network/virtualNetworks/cloudskills-vnet/subnets/testsubnet",
            "name": "testsubnet",
            "resource_group_name": "CloudSkilsRG1992",
            "virtual_network_name": "cloudskills-vnet"
          },
          "dependencies": [
            "azurerm_network_security_group.CloudskillsSG",
            "azurerm_resource_group.rg",
            "azurerm_virtual_network.cloudskills-vnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/CloudSkilsRG1992/providers/Microsoft.Network/virtualNetworks/cloudskills-vnet/subnets/testsubnet",
            "network_security_group_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/CloudSkilsRG1992/providers/Microsoft.Network/networkSecurityGroups/cloudSkillsSG",
            "subnet_id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/CloudSkilsRG1992/providers/Microsoft.Network/virtualNetworks/cloudskills-vnet/subnets/testsubnet"
          },
          "dependencies": [
            "azurerm_network_security_group.CloudskillsSG",
            "azurerm_subnet.cloudskills-sub"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "cloudskills-vnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "dns_servers": [
              "8.8.8.8",
              "8.8.4.4"
            ],
            "guid": "0581c0e4-3caf-4232-820c-a4a7bcb4a41d",
            "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/CloudSkilsRG1992/providers/Microsoft.Network/virtualNetworks/cloudskills-vnet",
            "location": "eastus",
            "name": "cloudskills-vnet",
            "resource_group_name": "CloudSkilsRG1992",
            "subnet": [
              {
                "address_prefix": "10.0.1.0/24",
                "id": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/CloudSkilsRG1992/providers/Microsoft.Network/virtualNetworks/cloudskills-vnet/subnets/testsubnet",
                "name": "testsubnet",
                "security_group": "/subscriptions/88e98c7d-911a-45db-87e2-c788bd626c53/resourceGroups/CloudSkilsRG1992/providers/Microsoft.Network/networkSecurityGroups/cloudSkillsSG"
              }
            ],
            "tags": {
              "environment": "Dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.rg"
          ]
        }
      ]
    }
  ]
}